# tokimon-app

./: .gitignore  README.md  개발리스트.md  기술명세.md  기획.md  목차.md  펫_에셋_사양서.md
examples/: README.md
examples/electron-rectangle/: README.md  package.json  tsconfig.json
examples/electron-rectangle/src/main/: index.ts
examples/electron-rectangle/src/main/app/: Application.ts
examples/electron-rectangle/src/main/ipc/: IpcRouter.ts  index.ts
examples/electron-rectangle/src/main/ipc/handlers/: WindowControlHandler.ts
examples/electron-rectangle/src/main/window/: TransparentWindow.ts  WindowFactory.ts  index.ts
examples/electron-rectangle/src/preload/: index.ts
examples/electron-rectangle/src/renderer/: index.html  main.ts  styles.css
examples/electron-rectangle/src/renderer/app/: App.ts
examples/electron-rectangle/src/renderer/render/: ShapeRenderer.ts  index.ts
examples/electron-rectangle/src/renderer/shapes/: Rectangle.ts  Shape.ts
examples/tauri-rectangle/: README.md  index.html  package-lock.json  package.json  tsconfig.json
examples/tauri-rectangle/src/: main.ts  styles.css
examples/tauri-rectangle/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-rectangle/src-tauri/src/: main.rs
examples/tauri-rectangle/src-tauri/src/commands/: mod.rs  window_control.rs
examples/tauri-rectangle/src-tauri/src/window/: mod.rs  transparent_window.rs
examples/tauri-rectangle/src/app/: App.ts
examples/tauri-rectangle/src/render/: DomShapeRenderer.ts  ShapeRenderer.ts
examples/tauri-rectangle/src/shapes/: Shape.ts  index.ts
tokimon-app/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
tokimon-app/docs/: tokimon-asset-spec.md  tokimon-gpt-asset-generation-guide.md  tokimon-state-definition.md
tokimon-app/public/pets/coin-monkey/: identity.md  manifest.json
tokimon-app/public/pets/dragon-mint/: identity.md  manifest.json
tokimon-app/public/pets/robot-spark/: identity.md  manifest.json
tokimon-app/src/: main.tsx  styles.css
tokimon-app/src-tauri/: Cargo.toml  tauri.conf.json
tokimon-app/src-tauri/capabilities/: default.json
tokimon-app/src-tauri/icons/: icon.icns
tokimon-app/src-tauri/src/: growth.rs  main.rs  tray.rs
tokimon-app/src-tauri/src/collector/: event.rs  mod.rs  sources.rs  store.rs
tokimon-app/src-tauri/src/commands/: window_control.rs
tokimon-app/src-tauri/src/window/: transparent_window.rs
tokimon-app/src/app/: App.tsx
tokimon-app/src/components/: PetView.tsx  SettingsPanel.tsx  ShapeView.tsx  SpriteSheet.tsx  StarterPicker.tsx  Wanderer.tsx
tokimon-app/src/domain/: ShapeKind.ts  localProfile.ts  petCatalog.ts  shapeDefaults.ts  tokimonState.ts
tokimon-app/src/motion/: randomTarget.ts  useWander.ts
