[package]
name = "tokimon-app"
version = "0.1.0"
description = "TokiMon — AI 토큰 반응형 데스크탑 펫"
authors = ["TokiMon"]
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tray-icon: 메뉴바/시스템 트레이 아이콘. 펫 선택 후 메인 윈도우는 hide되고
# 트레이만 남는 구조라 필수.
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
