[package]
name = "tokimon-app"
version = "0.1.0"
description = "TokiMon — AI 토큰 반응형 데스크탑 펫"
authors = ["TokiMon"]
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tray-icon: 메뉴바/시스템 트레이 아이콘.
# macos-private-api: macOS에서 펫 창 배경을 투명하게 만들 때 필요.
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 수집기가 적재한 usage_events를 읽고 pet_state를 저장하기 위한 SQLite 접근.
rusqlite = { version = "0.39.0", features = ["bundled"] }
# 로컬 AI 도구 사용량 수집기 내부 모듈 의존성.
dirs = "6.0.0"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
notify = "8.2.0"

[dev-dependencies]
tempfile = "3.27.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
